Added JavaDocs and Modified Readme for cmd