@@ -6,7 +6,6 @@
 - Gayo Williams - 091921
 - Rashid Salim - 114161
 
-
 ### Simple Multiplication
 ![Multiplication](https://github.com/Rashidsalim/CalculatorFXRMI/blob/master/Screenshots/calculator.png)
 
@@ -20,3 +19,17 @@
 
 ### Database Table
 ![Database Tables](https://github.com/Rashidsalim/CalculatorFXRMI/blob/master/Screenshots/tables.png)
+
+### Command Variables
+- Execute the Java Compiler
+```
+$ javac --module-path "C:\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml -classpath "D:\Repo\CalculatorFXRMI\*.java" .java
+```
+- Start RMI Registry
+```
+$ start rmiregistry
+```
+- Start the Server
+```
+$ java Server
+```
